--- a/src/TicTacToe/TicTacToe.css
+++ b/src/TicTacToe/TicTacToe.css
@@ -1,50 +1,50 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-
 .container {
-  background-color: #121c22;
+  text-align: center;
+  background-color: #041b21;
   height: 100vh;
-  width: 100vw;
 }
 
 .title {
-  text-align: center;
   color: white;
-  font-size: 30px;
-  padding: 50px 0;
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .title span {
   color: #72ffd4;
+  padding-left: 15px;
 }
 
-.board {
-    margin-top: 50px;
-  display: flex;
-  justify-content: center;
+.reset {
+  width: 250px;
+  height: 100px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50px;
+  background-color: #1f3540;
+  font-size: 26px;
+  color: #72ffd4;
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
-
-.row-1 .row-2 .row-3 {
-
-}
-
 .boxes {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  background-color: #243740;
-  width: 50px;
-  padding: 50px;
-  height: 50px;
-  margin: 2px;
+  display: flex;
+  height: 180px;
+  width: 180px;
+  background: #1f3540;
+  border: 4px solid #041b21;
+  cursor: pointer;
 }
-
-.btn{
-
-    color: #72ffd4;
-    padding: 10px;
-
-
+.board {
+  height: 600px;
+  width: 564px;
+  display: flex;
+  margin: auto;
 }
